--- a/templates/page1.html
+++ b/templates/page1.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title> My First Page Flask with HTML !!</title>
-</head>
-<body>
-	<h1>
-		First Page 
-	</h1>
+{% extends "layout.html" %}
+
+{% block heading %}
+  First Page
+  {% endblock %}
+	{% block body%}
 	<p>
 		Flask is a micro web framework written in Python. It is classified as a microframework because it does not require particular tools or libraries. It has no database abstraction layer, form validation, or any other components where pre-existing third-party libraries provide common functions. However, Flask supports extensions that can add application features as if they were implemented in Flask itself. Extensions exist for object-relational mappers, form validation, upload handling, various open authentication technologies and several common framework related tools. Extensions are updated far more frequently than the core Flask program.
 		Applications that use the Flask framework include Pinterest and LinkedIn.
 	</p>
+	
 	<a href="{{ url_for('more')}}"> Next Page...</a>
-
-</body>
-</html>
+    {% endblock %} 
