--- a/templates/list_name.html
+++ b/templates/list_name.html
@@ -7,10 +7,14 @@
 
 {% block body%}
   <ul>
-       {% for name in list_name %} 
+       {% for names in list_name %} 
 
-          <li> {{ name }} </li>
+          <li> {{ names }} </li>
       
        {% endfor %} 
    </ul>
+     <form action="{{ url_for('listname')}}" method="POST">
+   	     <input type="text" name="names" placeholder="Enter your Name">
+   	     <p><input type = "submit" value = "Add" /></p>
+   </form>
 {% endblock %}
