--- a/templates/list_name.html
+++ b/templates/list_name.html
@@ -7,14 +7,14 @@
 
 {% block body%}
   <ul>
-       {% for names in list_name %} 
+       {% for lnames in list_name %} 
 
-          <li> {{ names }} </li>
+          <li> {{ lnames }} </li>
       
        {% endfor %} 
    </ul>
-     <form action="{{ url_for('listname')}}" method="POST">
-   	     <input type="text" name="names" placeholder="Enter your Name">
+     <form action="{{ url_for('listname')}}" method="post">
+   	     <input type="text" name="get_name" placeholder="Enter your Name">
    	     <p><input type = "submit" value = "Add" /></p>
    </form>
 {% endblock %}
